    - Fix OpenBSD KVM code to use current kinfo_proc layout.
    - Detect system specific headers at configure time instead of hardcoding
      their usage depending on system macros.
    - Add a new --ppid matching option to check for parent PID.
      Suggested by Alex Mestiashvili <mailatgoogl@gmail.com>.
    - On GNU/Hurd do not link unnecessarily against libshouldbeinlibc and
      libihash.

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).
  * Thai (Theppitak Karoonboonyanan). Closes: #745032
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Italian (Beatrice Torracca). Closes: #742449
  * Swedish (Peter Krefting).
 
 -- Guillem Jover <guillem@debian.org>  Wed, 15 Jan 2014 19:02:55 +0100

dpkg (1.17.6) unstable; urgency=low

  [ Guillem Jover ]
  * Move signing in dpkg-buildpackage to the end of the build.
  * Add new --check-command and --check-option options to dpkg-buildpackage,
    and DEB_CHECK_COMMAND environment variable as a default value, to
    specify a package checker to use before the signing process.
  * Detect a missing gain-root-command even if dpkg-buildpackage is running
    as root.
  * Detect a missing sign-command in dpkg-buildpackage, before starting the
    build, to avoid a failure at the end of the process.
  * Remove trailing newlines from dpkg-deb warning message.
  * Change dpkg-deb conffile name length warning into an error, as dpkg will
    reject those packages at install time anyway.
  * Unify and clarify dpkg-deb and dpkg conffile name length error message.
    Closes: #108196
  * Add new start-stop-daemon --pid option. Closes: #253265
  * Mention Multi-Arch: no value in man pages. Closes: #732648
  * Correctly hyphenate binary-only and source-only in dpkg-buildpackage
    output messages.