@@ -68,6 +68,9 @@ dpkg (1.17.7) UNRELEASED; urgency=low
       Suggested by Alex Mestiashvili <mailatgoogl@gmail.com>.
     - On GNU/Hurd do not link unnecessarily against libshouldbeinlibc and
       libihash.
+  * Set TAR preprocessor variable at build time instead of hardcoding it.
+    This will allow non-GNU systems to easily use another value for their
+    GNU tar, which is usually either gnutar or gtar.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
